--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
-}
+} 
 
 html,
 body,
@@ -13,8 +13,8 @@ body,
 }
 
 body {
-  font-family: sans-serif;
-  background-color: #f9fbfd;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  background-image: url(lockBG.jpg);
 }
 
 .wrapper {
@@ -27,38 +27,27 @@ header {
   text-align: center;
   padding: 20px;
   padding-top: 0px;
-  color: hsl(206, 17%, 28%);
+  color: rgb(56, 18, 150);
 }
 
-.card {
-  background-color: hsl(0, 0%, 100%);
-  border-radius: 5px;
-  border-width: 1px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-  color: hsl(206, 17%, 28%);
-  font-size: 18px;
-  margin: 0 auto;
-  max-width: 800px;
-  padding: 30px 40px;
-}
 
-.card-header::after {
+
+.header::after {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
   height: 2px;
 }
 
-.card-body {
-  min-height: 100px;
+.genbody {
+  min-height: 10px;
 }
 
-.card-footer {
+.genfooter {
   text-align: center;
 }
 
-.card-footer::before {
+.genfooter::before {
   content: " ";
   display: block;
   width: 100%;
@@ -74,7 +63,7 @@ header {
 
 .btn {
   border: none;
-  background-color: hsl(360, 91%, 36%);
+  background-color: rgb(35, 25, 221);
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
@@ -88,10 +77,6 @@ header {
   cursor: pointer;
 }
 
-button[disabled] {
-  cursor: default;
-  background: #c0c7cf;
-}
 
 .float-right {
   float: right;
@@ -110,9 +95,9 @@ button[disabled] {
   padding-bottom: 85px;
   font-size: 1.2rem;
   text-align: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  border: 2px dashed #c0c7cf;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  border: 3px solid #161bb8;
   border-radius: 6px;
   resize: none;
   overflow: hidden;
@@ -123,14 +108,15 @@ button[disabled] {
     font-size: 1rem;
     margin: 16px 0px 0px 0px;
     padding: 10px 15px;
+
   }
 
   #password {
-    font-size: 1rem;
+    font-size: 20px;
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 100px) {
   .btn {
     font-size: 0.8rem;
   }
